<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        style="@style/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_header"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lbl_username"
                style="@style/edit_text_field"
                android:layout_marginTop="20dp"
                android:hint="@string/label_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lbl_email"
                style="@style/edit_text_field"
                android:hint="@string/label_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lbl_phone"
                style="@style/edit_text_field"
                android:hint="@string/label_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lbl_password"
                style="@style/edit_text_field"
                android:hint="@string/label_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_phone"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/gender"
                style="@style/text_field"
                android:layout_marginTop="20dp"
                android:text="@string/label_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_password" />

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                app:layout_constraintTop_toBottomOf="@id/gender">

                <RadioButton
                    android:id="@+id/radio_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_male" />

                <RadioButton
                    android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/label_female" />
            </RadioGroup>

            <TextView
                android:id="@+id/residentiality"
                style="@style/text_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_resident"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gender_group"/>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/is_resident"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true"
                android:layout_marginStart="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/residentiality">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/yes"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/no"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"/>

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <TextView
                android:id="@+id/lbl_volunteer"
                style="@style/text_field"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center_vertical"
                android:text="@string/label_want_volunteer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/is_resident" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/is_volunteer"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toEndOf="@id/lbl_volunteer"
                app:layout_constraintTop_toBottomOf="@id/is_resident" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_birth"
                style="@style/text_field"
                android:hint="@string/button_date_of_birth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_volunteer" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_second_page"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/black"
                android:layout_marginTop="20dp"
                android:text="@string/next"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>